Fix result section not responsive

--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -65,6 +65,7 @@ main {
   }
 
   .results {
+    width: 100%;
     margin: 2rem 0;
     display: flex;
     flex-direction: column;
